--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,21 @@
+html {
+  box-sizing: border-box;
+  font-size: 100%;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  margin: 0;
+}
+
 p {
-  color: red;
+  color: #CB3A31;
+  font-size: 16px;
+  padding: 20px;
+  border: 1px red solid;
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.12);
+  background-color: salmon;
+  margin: 100px;
 }/*# sourceMappingURL=main.css.map */
