--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 html {
   box-sizing: border-box;
   font-size: 100%;
+  font-family: "Inter", sans-serif;
 }
 
 *,
@@ -16,6 +17,94 @@ p {
   padding: 20px;
   border: 1px red solid;
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.12);
-  background-color: salmon;
+  background-color: #4C4DDC;
   margin: 100px;
+}
+
+.button__primary {
+  background-color: #4C4DDC;
+  border-radius: 6px;
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.12);
+  padding: 8px 16px;
+  text-decoration: none;
+  color: #FFFFFF;
+  font-size: 14px;
+  font-weight: 500;
+}
+.button__primary:hover {
+  background-color: #3334CC;
+}
+.button__primary:focus {
+  outline: 3px solid rgba(76, 77, 220, 0.2);
+}
+.button__primary:active {
+  background-color: #21217A;
+}
+
+.button__disabled {
+  background-color: #EDEDED;
+  border: 1px solid #C2C2C2;
+  border-radius: 6px;
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.12);
+  padding: 8px 16px;
+  text-decoration: none;
+  color: #9E9E9E;
+  font-size: 14px;
+  font-weight: 500;
+  cursor: not-allowed;
+}
+
+.button__danger {
+  background-color: #CB3A31;
+  border-radius: 6px;
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.12);
+  padding: 8px 16px;
+  text-decoration: none;
+  color: #FFFFFF;
+  font-size: 14px;
+  font-weight: 500;
+}
+.button__danger:hover {
+  background-color: #BD251C;
+}
+.button__danger:active {
+  background-color: #731912;
+}
+
+.button__outlined {
+  background-color: #FFFFFF;
+  border-radius: 6px;
+  border: 1px solid #EDEDED;
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.12);
+  padding: 8px 16px;
+  text-decoration: none;
+  color: #0A0A0A;
+  font-size: 14px;
+  font-weight: 500;
+}
+.button__outlined:hover {
+  background-color: #F5F5F5;
+}
+.button__outlined:focus {
+  outline: 3px solid rgba(76, 77, 220, 0.2);
+  border: 1px solid #4C4DDC;
+  background-color: #EDEDED;
+}
+.button__outlined:active {
+  background-color: #FFFFFF;
+}
+
+.button__secondary {
+  background-color: #F5F5FF;
+  border-radius: 6px;
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.12);
+  padding: 8px 16px;
+  text-decoration: none;
+  color: #4C4DDC;
+  font-size: 14px;
+  font-weight: 500;
+}
+.button__secondary:focus {
+  outline: 3px solid rgba(76, 77, 220, 0.2);
+  background-color: #EDEDED;
 }/*# sourceMappingURL=main.css.map */
